manifests/deployment-1.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "eventosdahoraakscluster-c875"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "eventosdahoraakscluster-c875"
    spec:
      containers:
        - name: "eventosdahoraakscluster-c875"
          image: "eventosdahoraacr.azurecr.io/eventosdahoraakscluster"
          ports:
          - containerPort: 8080
