manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "eventosdahoracluster-bfc1"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "eventosdahoracluster-bfc1"
    spec:
      containers:
        - name: "eventosdahoracluster-bfc1"
          image: "eventosdahoraregistry.azurecr.io/eventosdahoracluster"
          ports:
          - containerPort: 8080
