manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "eventosdahoraakscluster-c875"
    labels:
        app: "eventosdahoraakscluster-c875"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "eventosdahoraakscluster-c875"
